DTSCCI-3132 Merge conflicts